Finalize Lyra release documentation suite